Dynamic-access coverage for org.jboss.interceptor.proxy.InterceptorProxyCreatorImpl (4/16)