@@ -15,6 +15,10 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.22.0'
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
+}
+
 graalvmNative {
     agent {
         defaultMode = "conditional"
@@ -22,6 +26,11 @@ graalvmNative {
             conditional {
                 userCodeFilterPath = "user-code-filter.json"
             }
+        }
+    }
+    binaries {
+        all {
+            buildArgs.add("--add-opens=java.base/java.lang=ALL-UNNAMED")
         }
     }
 }
